# tarot

./: README.md  index.html  pyproject.toml  script.js  style.css  wrangler.toml
src/: __init__.py  api.py  astrology.py  entry.py  tarot_data.py  tarot_engine.py
tests/: test_engine.py
