[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tarot-python-worker"
version = "0.1.0"
description = "Japanese Tarot + Astrology API for Cloudflare Workers"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0,<1.0",
  "pydantic>=2.7.0,<3.0",
]

[project.optional-dependencies]
dev = [
  "uvicorn>=0.30.0,<1.0",
  "pytest>=8.3.0,<9.0",
  "httpx>=0.27.0,<1.0",
]
deploy = [
  "pywrangler>=0.0.2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
